--- a/debian/rules
+++ b/debian/rules
@@ -9,12 +9,10 @@ ifndef DESTDIR
 	DESTDIR=`pwd`/debian/$(PACKAGE)
 endif
 
-override_dh_auto_install:
-	install -D --mode 600 --backup yubiauth/default_settings.py \
-		$(DESTDIR)/etc/yubico/yubiauth/yubiauth
-	dh_auto_install
+override_dh_auto_build:
+	cp yubiauth/default_settings.py yubiauth.conf
+	dh_auto_build
 
 %:
 	dh $@ --with python2 --buildsystem=python_distutils
-
 
