Fixed apache conf.

--- a/debian/conf/apache.conf
+++ b/debian/conf/apache.conf
@@ -1,13 +1,24 @@
 # yubiauth default Apache configuration
 
 <IfModule mod_wsgi.c>
-	WSGIScriptAlias /yubiauth /usr/share/pyshared/yubiauth/rest.py
+	WSGIScriptAlias /yubiauth/core /usr/share/pyshared/yubiauth/core/rest.py
+	WSGIScriptAlias /yubiauth/client /usr/share/pyshared/yubiauth/client/rest.py
 
-	<Directory /usr/share/pyshared/yubiauth/>
+	# Core administrative API, access from localhost only.
+	<Directory /usr/share/pyshared/yubiauth/core/>
 		Options None
 		AllowOverride None
 		Order deny,allow
 		Deny from all
 		Allow from 127.0.0.1
+	</Directory>
+
+	# Client API, public access.
+	<Directory /usr/share/pyshared/yubiauth/client/>
+		Options None
+		AllowOverride None
+		Order deny,allow
+		Deny from None
+		Allow from all
 	</Directory>
 </IfModule>
