--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,6 @@ include NEWS
 include release.py
 include ChangeLog
 include doc/*.md
+include examples/*
+recursive-include yubiauth/static *
+recursive-include yubiauth/client/templates *
