New upstream release.

--- a/debian/conf/apache.conf
+++ b/debian/conf/apache.conf
@@ -3,6 +3,9 @@
 <IfModule mod_wsgi.c>
 	WSGIScriptAlias /yubiauth/core /usr/share/pyshared/yubiauth/core/rest.py
 	WSGIScriptAlias /yubiauth/client /usr/share/pyshared/yubiauth/client/rest.py
+	WSGIScriptAlias /yubiauth/ui /usr/share/pyshared/yubiauth/client/web.py
+	
+	Alias /yubiauth/static /usr/share/pyshared/yubiauth/static/
 
 	# Core administrative API, access from localhost only.
 	<Directory /usr/share/pyshared/yubiauth/core/>
@@ -15,6 +18,15 @@
 
 	# Client API, public access.
 	<Directory /usr/share/pyshared/yubiauth/client/>
+		Options None
+		AllowOverride None
+		Order deny,allow
+		Deny from None
+		Allow from all
+	</Directory>
+
+	#Static content, public access.
+	<Directory /usr/share/pyshared/yubiauth/static/>
 		Options None
 		AllowOverride None
 		Order deny,allow
