--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,8 @@ XB-Python-Version: ${python:Versions}
 Provides: ${python:Provides}
 Recommends: yhsm-daemon,
             apache2,
-            libapache2-mod-wsgi
+            libapache2-mod-wsgi,
+            logrotate
 Description: User management system with YubiKey validation
  YubiAuth provides a user management system which can be used as a base for 
  other systems. It allows the creation of users, which can be authenticated by
