Fix config for Apache 2.4

--- a/debian/conf/apache-2.2.conf
+++ b/debian/conf/apache-2.2.conf
@@ -1,4 +1,6 @@
-# yubiauth default Apache configuration
+# yubiauth default Apache 2.2 configuration
+#
+# NOTE: This file is not used when running Apache 2.4 or later!
 
 <IfModule mod_wsgi.c>
 	WSGIScriptAlias /yubiauth/core /usr/share/pyshared/yubiauth/core/rest.py
