Fix for apache 2.4 configuration.

--- a/debian/conf/apache-2.4.conf
+++ b/debian/conf/apache-2.4.conf
@@ -3,29 +3,29 @@
 # NOTE: This file is not used when running Apache 2.2 or earlier!
 
 <IfModule mod_wsgi.c>
-	WSGIScriptAlias /yubiauth/core /usr/share/pyshared/yubiauth/core/rest.py
-	WSGIScriptAlias /yubiauth/client /usr/share/pyshared/yubiauth/client/rest.py
-	WSGIScriptAlias /yubiauth/ui /usr/share/pyshared/yubiauth/client/web.py
+	WSGIScriptAlias /yubiauth/core /usr/lib/python2.7/dist-packages/yubiauth/core/rest.py
+	WSGIScriptAlias /yubiauth/client /usr/lib/python2.7/dist-packages/yubiauth/client/rest.py
+	WSGIScriptAlias /yubiauth/ui /usr/lib/python2.7/dist-packages/yubiauth/client/web.py
 	
-	Alias /yubiauth/static /usr/share/pyshared/yubiauth/static/
+	Alias /yubiauth/static /usr/lib/python2.7/dist-packages/yubiauth/static/
 
 	# Core administrative API, access from localhost only.
-	<Directory /usr/share/pyshared/yubiauth/core/>
-		Options None
+	<Directory /usr/lib/python2.7/dist-packages/yubiauth/core/>
+		Options FollowSymLinks
 		AllowOverride None
 		Require ip 127.0.0.1
 	</Directory>
 
 	# Client API, public access.
-	<Directory /usr/share/pyshared/yubiauth/client/>
-		Options None
+	<Directory /usr/lib/python2.7/dist-packages/yubiauth/client/>
+		Options FollowSymLinks
 		AllowOverride None
 		Require all granted
 	</Directory>
 
 	#Static content, public access.
-	<Directory /usr/share/pyshared/yubiauth/static/>
-		Options None
+	<Directory /usr/lib/python2.7/dist-packages/yubiauth/static/>
+		Options FollowSymLinks
 		AllowOverride None
 		Require all granted
 	</Directory>
