Unified apache configuration.

--- a/debian/conf/apache.conf
+++ b/debian/conf/apache.conf
@@ -1,6 +1,4 @@
 # yubiauth default Apache configuration
-#
-# NOTE: This file is not used when running Apache 2.2 or earlier!
 
 <IfModule mod_wsgi.c>
 	WSGIScriptAlias /yubiauth/core /usr/lib/python2.7/dist-packages/yubiauth/core/rest.py
@@ -13,20 +11,41 @@
 	<Directory /usr/lib/python2.7/dist-packages/yubiauth/core/>
 		Options FollowSymLinks
 		AllowOverride None
-		Require ip 127.0.0.1
+		<IfVersion >= 2.3>
+			Require local
+		</IfVersion>
+		<IfVersion < 2.3>
+			Order deny,allow
+			Deny from all
+			Allow from 127.0.0.1
+		</IfVersion>
 	</Directory>
 
 	# Client API, public access.
 	<Directory /usr/lib/python2.7/dist-packages/yubiauth/client/>
 		Options FollowSymLinks
 		AllowOverride None
-		Require all granted
+		<IfVersion >= 2.3>
+			Require all granted
+		</IfVersion>
+		<IfVersion < 2.3>
+			Order deny,allow
+			Deny from None
+			Allow from all
+		</IfVersion>
 	</Directory>
 
 	#Static content, public access.
 	<Directory /usr/lib/python2.7/dist-packages/yubiauth/static/>
 		Options FollowSymLinks
 		AllowOverride None
-		Require all granted
+		<IfVersion >= 2.3>
+			Require all granted
+		</IfVersion>
+		<IfVersion < 2.3>
+			Order deny,allow
+			Deny from None
+			Allow from all
+		</IfVersion>
 	</Directory>
 </IfModule>
