Don't require mod_version (fixes #1).

--- a/debian/conf/apache.conf
+++ b/debian/conf/apache.conf
@@ -11,41 +11,41 @@
 	<Directory /usr/lib/python2.7/dist-packages/yubiauth/core/>
 		Options FollowSymLinks
 		AllowOverride None
-		<IfVersion >= 2.3>
+		<IfModule mod_authz_core.c>
 			Require local
-		</IfVersion>
-		<IfVersion < 2.3>
+		</IfModule>
+		<IfModule !mod_authz_core.c>
 			Order deny,allow
 			Deny from all
 			Allow from 127.0.0.1
-		</IfVersion>
+		</IfModule>
 	</Directory>
 
 	# Client API, public access.
 	<Directory /usr/lib/python2.7/dist-packages/yubiauth/client/>
 		Options FollowSymLinks
 		AllowOverride None
-		<IfVersion >= 2.3>
+		<IfModule mod_authz_core.c>
 			Require all granted
-		</IfVersion>
-		<IfVersion < 2.3>
+		</IfModule>
+		<IfModule !mod_authz_core.c>
 			Order deny,allow
 			Deny from None
 			Allow from all
-		</IfVersion>
+		</IfModule>
 	</Directory>
 
 	#Static content, public access.
 	<Directory /usr/lib/python2.7/dist-packages/yubiauth/static/>
 		Options FollowSymLinks
 		AllowOverride None
-		<IfVersion >= 2.3>
+		<IfModule mod_authz_core.c>
 			Require all granted
-		</IfVersion>
-		<IfVersion < 2.3>
+		</IfModule>
+		<IfModule !mod_authz_core.c>
 			Order deny,allow
 			Deny from None
 			Allow from all
-		</IfVersion>
+		</IfModule>
 	</Directory>
 </IfModule>
